<resources>
    <string name="app_name">Lab2.2Profile</string>
    <string name="profile_image">Profile image</string>
    <string name="web">Web</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
</resources>
